--- a/source/pug/base/footer.pug
+++ b/source/pug/base/footer.pug
@@ -4,12 +4,16 @@ mixin footer(footerMod)
       ul.page-footer__social-list
         li.page-footer__social-item
           a.page-footer__social-link(href="#")
+            +icon("icon-twitter", 32, 32)
         li.page-footer__social-item
           a.page-footer__social-link(href="#")
+            +icon("icon-insta", 32, 32)
         li.page-footer__social-item
           a.page-footer__social-link(href="#")
+            +icon("icon-fb", 32, 32)
         li.page-footer__social-item
           a.page-footer__social-link(href="#")
+            +icon("icon-vk", 32, 32)
     .page-footer__info
       ul.page-footer__info-list
         li.page-footer__info-item.page-footer__info-item--supplier
