--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -31,11 +31,11 @@
   margin: 0 auto;
   z-index: -1;
 
-  &--chocolate {
+  &--banki {
     display: none;
   }
 
-  &--strawberry {
+  &--rozliv {
     display: none;
   }
 }
