--- a/source/pug/base/header.pug
+++ b/source/pug/base/header.pug
@@ -50,7 +50,8 @@ header.page-header
   nav.user-navigation
     ul.user-navigation__list
       li.user-navigation__item
-        a.user-navigation__link.user-navigation__link--search(href="")
+        a.user-navigation__link.user-navigation__link--search
+          +icon("icon-search", 17, 17)
         .user-navigation__sub-search
           input(type="text" placeholder="Крем-брюле")
       //- li.user-navigation__item
