--- a/source/pug/base/layout.pug
+++ b/source/pug/base/layout.pug
@@ -1,4 +1,4 @@
-//- include ../base/mixins
+include ../base/mixins
 include ../base/header
 include ../base/footer
 //- include ../base/modal
@@ -26,7 +26,7 @@ html(lang="ru")
     link(rel="stylesheet", href="css/style.min.css")
 
   body
-    //- +sprite()
+    +sprite()
     if (hasHeader)
       +header(headerMod, currentPage)
 
