--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -20,14 +20,14 @@ block main
         span.schedule__time Принимаем звонки с 10 до 20, ежедневно
         span.schedule__phone +7 000 000 000
     section.intro
-      .intro__main-image.intro__main-image--cream
-        img(src="img/icecream.png" alt="мороженое Крем-брюле и пломбир с малиновым джемом" width="647" height="584")
-      .intro__main-image.intro__main-image--chocolate
-        img(src="img/icecream.png" alt="мороженое Крем-брюле и пломбир с малиновым джемом" width="647" height="584")
-      .intro__main-image.intro__main-image--strawberry
-        img(src="img/icecream.png" alt="мороженое Крем-брюле и пломбир с малиновым джемом" width="647" height="584")
-      h2.intro__heading Крем-брюле и пломбир с малиновым джемом
-      a.button(href="#") Давайте оба!
+      .intro__main-image.intro__main-image--banki
+        img(src="img/typeBanki.png" alt="мед в банках" width="386" height="392")
+      .intro__main-image.intro__main-image--soty
+        img(src="img/typeSoty.png" alt="мед в сотах" width="900" height="740")
+      .intro__main-image.intro__main-image--rozliv
+        img(src="img/typeRozliv.png" alt="мед на розлив" width="840" height="859")
+      h2.intro__heading Мед в сотах
+      a.button(href="#") Хочу все!
       .themes
         span.themes__dot.themes__dot--active.jsDot1
         span.themes__dot.jsDot2
@@ -36,40 +36,44 @@ block main
       article.features__item.features__item--raspberry
         h2.features__heading Малинка даром!
         p.features__description При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.
-        a.button.features__link(href="#") Хочу варенье!
+        a.button.features__link(href="#") Подробнее
       article.features__item.features__item--chocolate
         h2.features__heading Шоколадки даром!
         p.features__description При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.
-        a.button.features__link(href="#") Хочу шоколадки!
+        a.button.features__link(href="#") Подробнее
     section.content
       ul.content__list
         li.content__item.content__item--hit
-          img(src="img/orange.png" width="267" height="267" alt="Сливочное мороженое с апельсиновым джемом и цитрусовой стружкой")
+          .content__image
+            img(src="img/soty2.jpg" width="1039" height="763" alt="мед в сотах")
           p.content__info
             span.content__price 310 ₽
             span.content__price-measure /кг
-            h3.content__heading Сливочное с апельсиновым джемом и цитрусовой стружкой
+            h3.content__heading Мед в сотах Краснодарский
             a.button(href="#") Быстрый просмотр
         li.content__item.content__item--hit
-          img(src="img/coffee.png"  width="267" height="267" alt="Сливочно-кофейное мороженое с кусочками шоколада")
+          .content__image
+            img(src="img/soty.jpg" width="540" height="520" alt="мед в сотах")
           p.content__info
             span.content__price 380 ₽
             span.content__price-measure /кг
-          h3.content__heading Сливочно-кофейное с кусочками шоколада
+          h3.content__heading Мед в сотах Ростовский
           a.button(href="#") Быстрый просмотр
         li.content__item.content__item--hit
-          img(src="img/strawberry.png"  width="267" height="267" alt="Сливочно-клубничное мороженое с присыпкой из белого шоколада")
+          .content__image
+            img(src="img/vosk.jpg"  width="1000" height="1000" alt="воск")
           p.content__info
             span.content__price 355 ₽
             span.content__price-measure /кг
-          h3.content__heading Сливочно-клубничное с присыпкой из белого шоколада
+          h3.content__heading Воск
           a.button(href="#") Быстрый просмотр
         li.content__item.content__item--hit
-          img(src="img/cream.png"  width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой")
+          .content__image
+            img(src="img/s_propolisom.png"  width="370" height="270" alt="Мед с прополисом")
           p.content__info
             span.content__price 415 ₽
             span.content__price-measure /кг
-          h3.content__heading Сливочное крем-брюле с карамельной подливкой
+          h3.content__heading Мед с прополисом
           a.button(href="#") Быстрый просмотр
     section.about
       h2.about__heading Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес
