--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -4,6 +4,20 @@
   margin-bottom: -43px;
 }
 
+.content__image {
+  width: 100%;
+  height: 200px;
+  margin-bottom: 10px;
+
+  img {
+    object-fit: cover;
+    max-width: 100%;
+    max-height: 100%;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .content__list {
   @include list-reset();
   display: flex;
@@ -43,8 +57,9 @@
 }
 
 .content__info {
-  position: absolute;
-  top: 214px;
+  // position: absolute;
+  // top: 214px;
+  text-align: center;
   margin: 0;
   text-shadow: 0.5px 0.9px 3px rgba(49, 50, 53, 0.5);
   font-weight: bold;
