--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -13,13 +13,13 @@
   padding: 23px 20px;
 
   &--raspberry {
-    background-image: url("../../img/raspberry.png");
+    background-image: url("../img/raspberry.png");
     background-repeat: no-repeat;
     margin-right: 26px;
   }
 
   &--chocolate {
-    background-image: url("../../img/chocolate-back.png");
+    background-image: url("../img/chocolate-back.png");
     background-repeat: no-repeat;
   }
 }
