--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -30,6 +30,12 @@
   right: 0;
   margin: 0 auto;
   z-index: -1;
+  width: 600px;
+  height: 600px;
+
+  img {
+    object-fit: contain;
+  }
 
   &--banki {
     display: none;
