--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -2,8 +2,10 @@
   @include wrapper();
   margin-bottom: 40px;
   padding: 29px 21px 25px 21px;
-  background-image: url("../../img/wafer-back.png");
+  background-image: url("../img/wafer-back.png");
   background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 20px
 }
 
 .about__list {
@@ -24,34 +26,8 @@
   margin: 0 0 26px 0;
 }
 
-.about__description {
-  position: relative;
+.about__description {  
   margin: 0 0 28px 0;
   max-width: 476px;
   line-height: 1.25;
-
-  &::before {
-    content: "";
-    position: absolute;
-    width: 49px;
-    height: 49px;
-    top: -17px;
-    left: -55px;
-  }
-
-  &--icecream::before {
-    background-image: url("../../img/icon-icecream.svg");
-  }
-
-  &--ingredients::before {
-    background-image: url("../../img/icon-cow.svg");
-  }
-
-  &--leaf::before {
-    background-image: url("../../img/icon-leaf.svg");
-  }
-
-  &--temperature::before {
-    background-image: url("../../img/icon-temperature.svg");
-  }
 }
