--- a/source/sass/blocks/content.scss
+++ b/source/sass/blocks/content.scss
@@ -39,7 +39,7 @@
       height: 61px;
       top: 0;
       left: 0;
-      background-image: url("../../img/hit.svg");
+      background-image: url("../img/sprite/hit.svg");
     }
   }
 
