--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -32,6 +32,18 @@
   height: 38px;
   border: 3px solid #c2cec7;
   border-radius: 50%;
+
+  svg {
+    fill: #fff;
+    transition: fill 0.3s ease;
+  }
+
+  &:hover,
+  &:focus {
+    svg {
+      fill: yellowgreen;
+    }
+  }
 }
 
 .page-footer__social-item:last-child {
@@ -64,7 +76,7 @@
       left: 0;
       width: 15px;
       height: 13px;
-      background-image: url("../../img/icon-heart.svg");
+      background-image: url("../img/sprite/icon-heart.svg");
     }
   }
 }
