--- a/source/pug/base/header.pug
+++ b/source/pug/base/header.pug
@@ -4,6 +4,8 @@ mixin header(headerMod, currentPage)
     nav.main-navigation
       ul.main-navigation__list
         li.main-navigation__item
+           a.main-navigation__link(href="index.html") Главная
+        li.main-navigation__item
           a.main-navigation__link(href="catalog.html")
             span Каталог
           ul.main-navigation__submenu
