--- a/source/pug/data/catalog-data.pug
+++ b/source/pug/data/catalog-data.pug
@@ -1,48 +1,48 @@
 -
     var catalogItems = [
       {
-        img: {src: "orange", ext: "png", width: 267, height: 267, alt: "Сливочное с апельсиновым джемом и цитрусовой стружкой"},
-        name: "Сливочное с апельсиновым джемом и цитрусовой стружкой",
+        img: {src: "akaciya", ext: "png", width: 370, height: 270, alt: "Акациевый мёд"},
+        name: "Акациевый мёд",
         price: 310,
       },
       {
-        img: {src: "coffee", ext: "png", width: 267, height: 267, alt: "Сливочное с апельсиновым джемом и цитрусовой стружкой"},
-        name: "Сливочное с апельсиновым джемом и цитрусовой стружкой",
+        img: {src: "chernoklen", ext: "png", width: 370, height: 270, alt: "Черноклёновый мёд"},
+        name: "Черноклёновый мёд",
         price: 380,
       },
        {
-        img: {src: "strawberry", ext: "png", width: 267, height: 267, alt: "Сливочное с апельсиновым джемом и цитрусовой стружкой"},
-        name: "Сливочное с апельсиновым джемом и цитрусовой стружкой",
+        img: {src: "don", ext: "png", width: 370, height: 270, alt: "Донской мёд"},
+        name: "Донской мёд",
         price: 299,
       },
        {
-        img: {src: "cream", ext: "png", width: 267, height: 267, alt: "Сливочное с апельсиновым джемом и цитрусовой стружкой"},
-        name: "Сливочное с апельсиновым джемом и цитрусовой стружкой",
+        img: {src: "esparcetovij", ext: "png", width: 370, height: 219, alt: "Эспарцетовый мёд"},
+        name: "Эспарцетовый мёд",
         price: 280,
       },
        {
-        img: {src: "cowberry", ext: "png", width: 267, height: 267, alt: "Сливочное с апельсиновым джемом и цитрусовой стружкой"},
-        name: "Сливочное с апельсиновым джемом и цитрусовой стружкой",
+        img: {src: "grech", ext: "png", width: 370, height: 270, alt: "Гречишный мёд"},
+        name: "Гречишный мёд",
         price: 350,
       },
        {
-        img: {src: "bilberry", ext: "png", width: 267, height: 267, alt: "Сливочное с апельсиновым джемом и цитрусовой стружкой"},
-        name: "Сливочное с апельсиновым джемом и цитрусовой стружкой",
+        img: {src: "s_propolisom", ext: "png", width: 370, height: 270, alt: "Мёд с прополисом"},
+        name: "Мёд с прополисом",
         price: 370,
       },
        {
-        img: {src: "lemon", ext: "png", width: 267, height: 267, alt: "Сливочное с апельсиновым джемом и цитрусовой стружкой"},
-        name: "Сливочное с апельсиновым джемом и цитрусовой стружкой",
+        img: {src: "koriandrovij", ext: "png", width: 370, height: 270, alt: "Кориандровый мёд"},
+        name: "Кориандровый мёд",
         price: 200,
       },
        {
-        img: {src: "creamy-chocolate", ext: "png", width: 267, height: 267, alt: "Сливочное с апельсиновым джемом и цитрусовой стружкой"},
-        name: "Сливочное с апельсиновым джемом и цитрусовой стружкой",
+        img: {src: "lipa", ext: "png", width: 370, height: 270, alt: "Липовый мёд"},
+        name: "Липовый мёд",
         price: 250,
       },
        {
-        img: {src: "vanilla-chocolate", ext: "png", width: 267, height: 267, alt: "Сливочное с апельсиновым джемом и цитрусовой стружкой"},
-        name: "Сливочное с апельсиновым джемом и цитрусовой стружкой",
+        img: {src: "lug", ext: "png", width: 370, height: 270, alt: "Луговой мёд"},
+        name: "Луговой мёд",
         price: 360,
       },
     ]
