добавляет страницу квестов

--- a/source/pug/pages/escaperoom.pug
+++ b/source/pug/pages/escaperoom.pug
@@ -40,15 +40,15 @@ html(lang="ru")
         nav.main-menu
             ul.main-navigation
                 li.main-navigation__item
-                    a(href="selectQuest.html") Квесты
+                    a(href="escaperoom-selectQuest.html") Квесты
                 li.main-navigation__item
-                    a(href="selectQuest.html") Новичкам
+                    a(href="escaperoom-selectQuest.html") Новичкам
                 li.main-navigation__item
-                    a(href="selectQuest.html") Отзывы
+                    a(href="escaperoom-selectQuest.html") Отзывы
                 li.main-navigation__item
-                    a(href="selectQuest.html") Акции
+                    a(href="escaperoom-selectQuest.html") Акции
                 li.main-navigation__item
-                    a(href="selectQuest.html") Контакты          
+                    a(href="escaperoom-selectQuest.html") Контакты          
             ul.user-navigation
                 li.user-navigation__item.user-navigation__item--city
                     a.jsCity(href="#") Новосибирск
@@ -58,7 +58,7 @@ html(lang="ru")
         section.intro
             h1 Лучшие квесты<br> в Новосибирске
             p Надоело проводить свободное время лёжа на диване? Игровые площадки questroom на целый час погружают вас в мир незабываемых авантюр. Ищите подсказки, решайте головоломки и находите выход из комнаты!
-            a.button(href="selectQuest.html") Выбрать квест
+            a.button(href="escaperoom-selectQuest.html") Выбрать квест
     footer.page-footer
       ul.socials
         li.socials__item.socials__item--instagram
