добавляет страницу бронирования в escaperoom

--- a/source/pug/pages/escaperoom-maniack.pug
+++ b/source/pug/pages/escaperoom-maniack.pug
@@ -64,7 +64,7 @@ html(lang="ru")
                 span.quest__quantity 3–4 чел
                 span.quest__dificulty средняя сложность           
             p В комнате с приглушённым светом несколько человек, незнакомых друг с другом, приходят в себя. Никто не помнит, что произошло прошлым вечером. Руки и ноги связаным, но одному из вас получилось освободиться. На стене висит пугающий таймер и запущен отсчёт<br> 60 минут.                Сможете ли вы разобраться в стрессовой ситуации, помочь другим, разобраться что произошло и выбраться из комнаты?
-            a.button(href="book.html") Забронировать  
+            a.button(href="escaperoom-book.html") Забронировать  
     footer.page-footer
       ul.socials
         li.socials__item.socials__item--instagram
