--- a/source/pug/pages/escaperoom-mansion.pug
+++ b/source/pug/pages/escaperoom-mansion.pug
@@ -64,7 +64,7 @@ html(lang="ru")
                 span.quest__quantity 2–5 чел
                 span.quest__dificulty легкий квест           
             p Погрузитесь в атмосферу служебных помещений закулисья, которые хранят множество тайн и загадок. Вы окажитесь в старом особняке и увидите все, что скрывают его запутанные коридоры.
-            a.button(href="book.html") Забронировать  
+            a.button(href="escaperoom-book.html") Забронировать  
     footer.page-footer
       ul.socials
         li.socials__item.socials__item--instagram
