--- a/source/pug/pages/escaperoom-experiment.pug
+++ b/source/pug/pages/escaperoom-experiment.pug
@@ -64,7 +64,7 @@ html(lang="ru")
                 span.quest__quantity 5–8 чел
                 span.quest__dificulty высокая сложность           
             p Вы стоите на пороге нового научного открытия, которое перевернет судьбу человечества. Но что-то идёт не так, и ядерный реактор, который работает на полную мощность, сигнализирует о скорой поломке. Удастся ли вам починить его в отведенное время<br>и предотвратить гибель людей в этом фатальном эксперименте?
-            a.button(href="book.html") Забронировать  
+            a.button(href="escaperoom-book.html") Забронировать  
     footer.page-footer
       ul.socials
         li.socials__item.socials__item--instagram
