--- a/source/pug/pages/escaperoom-ritual.pug
+++ b/source/pug/pages/escaperoom-ritual.pug
@@ -64,7 +64,7 @@ html(lang="ru")
                 span.quest__quantity 3–5 чел
                 span.quest__dificulty высокая сложность           
             p Тяжелый воздух угнетает, в ночи вы оказыватесь запертыми в сыром помещении вместе с другими ничего не понимающими жертвами. Сквозь щель в двери вы видите, как некто в капюшоне готовит площадку как будто для проведения мистического обряда. Удастся ли вам выбраться, пока вы не станете жертвой ритуала?
-            a.button(href="book.html") Забронировать  
+            a.button(href="escaperoom-book.html") Забронировать  
     footer.page-footer
       ul.socials
         li.socials__item.socials__item--instagram
