правит сборку Pug

--- a/source/pug/base/layout.pug
+++ b/source/pug/base/layout.pug
@@ -23,7 +23,7 @@ html(lang="ru")
     meta(name="msapplication-TileColor" content="#ffcf55")
     meta(name="theme-color" content="#ffffff")
 
-    link(rel="stylesheet", href="css/style.min.css")
+    link(rel="stylesheet", href="../css/style.min.css")
 
   body
     +sprite()
@@ -37,5 +37,5 @@ html(lang="ru")
 
     block modals
 
-    script(src="js/vendor.min.js")
-    script(src="js/main.min.js")
+    script(src="../js/vendor.min.js")
+    script(src="../js/main.min.js")
