--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -13,7 +13,7 @@ block variables
 
 block main
   main
-    h2    
-      a(href="honey.html") Honey - мёд на любой вкус!(без адаптива - 2 страницы)
-    h2 
-      a(href="escaperoom.html") Escaperoom - страница квестов в реальности(адаптив мобильная, планшетная, десктопная версии - несколько страниц)
+    h2
+      a(href="honey/honey.html") Honey - мёд на любой вкус!(без адаптива - 2 страницы)
+    h2
+      a(href="escaperoom/escaperoom.html") Escaperoom - страница квестов в реальности(адаптив мобильная, планшетная, десктопная версии - несколько страниц)
