--- a/source/pug/pages/escaperoom/escaperoom-book.pug
+++ b/source/pug/pages/escaperoom/escaperoom-book.pug
@@ -1,6 +1,6 @@
-include ../base/mixins
-include ../base/header
-include ../base/footer
+include ../../base/mixins
+include ../../base/header
+include ../../base/footer
 
 block data
 
@@ -24,15 +24,15 @@ html(lang="ru")
 
     link(rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png")
     link(rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png")
-    link(rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png") 
+    link(rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png")
     link(rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#ffcf55")
     meta(name="msapplication-TileColor" content="#ffcf55")
     meta(name="theme-color" content="#ffffff")
 
-    link(rel="stylesheet", href="css/style2.min.css")
+    link(rel="stylesheet", href="../css/style2.min.css")
 
   body.bodybook
-    include ../../../build/img/sprite2_auto.svg
+    include ../../../../build/img/sprite2_auto.svg
     header.page-header.page-header--index.page-header--nojs.page-header--closed
         .page-header__logo
             a
@@ -48,12 +48,12 @@ html(lang="ru")
                 li.main-navigation__item
                     a(href="escaperoom-selectQuest.html") Акции
                 li.main-navigation__item
-                    a(href="escaperoom-selectQuest.html") Контакты          
+                    a(href="escaperoom-selectQuest.html") Контакты
             ul.user-navigation
                 li.user-navigation__item.user-navigation__item--city
                     a.jsCity(href="#") Новосибирск
                 li.user-navigation__item
-                    a.jsCity(href="tel:+73832840160") 8 (383) 284 01 60             
+                    a.jsCity(href="tel:+73832840160") 8 (383) 284 01 60
     main
         section.book
             a.book__home(href="maniack.html") Описание
@@ -65,13 +65,13 @@ html(lang="ru")
                     span Вы выбрали игру
                     span 22 марта в 16:00.
                     span К оплате 1500 рублей.
-                a(href="#") Перейти к оплате          
+                a(href="#") Перейти к оплате
             .book__container
                 a.book__date(href="#") Выберите дату
                 span.book__date-selected 22 марта
             ul.book__options
-                li.book__options-item — свободно               
-                li.book__options-item — занято              
+                li.book__options-item — свободно
+                li.book__options-item — занято
                 li.book__options-item — выбрано вами
             form.book__list(action="#" method="get")
                 label
@@ -89,48 +89,48 @@ html(lang="ru")
                 label
                     input(type="radio" name="booktime" disabled)
                     span.book__time 13:30
-                    span.book__price 1400 ₽              
+                    span.book__price 1400 ₽
                 label
                     input(type="radio" name="booktime")
                     span.book__time 14:45
-                    span.book__price 1400 ₽              
+                    span.book__price 1400 ₽
                 label
                     input(type="radio" name="booktime")
                     span.book__time 16:00
-                    span.book__price 1500 ₽             
+                    span.book__price 1500 ₽
                 label
                     input(type="radio" name="booktime")
                     span.book__time 17:15
-                    span.book__price 1500 ₽             
+                    span.book__price 1500 ₽
                 label
                     input(type="radio" name="booktime")
                     span.book__time 18:30
-                    span.book__price 1500 ₽             
+                    span.book__price 1500 ₽
                 label
                     input(type="radio" name="booktime")
                     span.book__time 19:45
-                    span.book__price 1500 ₽             
+                    span.book__price 1500 ₽
                 label
                     input(type="radio" name="booktime")
                     span.book__time 21:00
-                    span.book__price 1800 ₽             
+                    span.book__price 1800 ₽
                 label
                     input(type="radio" name="booktime" disabled)
                     span.book__time 22:15
-                    span.book__price 1800 ₽             
+                    span.book__price 1800 ₽
                 label
                     input(type="radio" name="booktime" disabled)
                     span.book__time 23:30
-                    span.book__price 2000 ₽            
+                    span.book__price 2000 ₽
     footer.page-footer
       ul.socials
         li.socials__item.socials__item--instagram
-            a(href="#")       
+            a(href="#")
         li.socials__item.socials__item--vk
-            a(href="#")      
-      a.page-footer__question.jsQuestion(href="#") Задать вопрос    
+            a(href="#")
+      a.page-footer__question.jsQuestion(href="#") Задать вопрос
 
     block modals
 
-    script(src="js/vendor.min.js")
-    script(src="js/main.min.js")    
+    script(src="../js/vendor.min.js")
+    script(src="../js/main.min.js")
