--- a/source/pug/pages/escaperoom/escaperoom-experiment.pug
+++ b/source/pug/pages/escaperoom/escaperoom-experiment.pug
@@ -1,6 +1,6 @@
-include ../base/mixins
-include ../base/header
-include ../base/footer
+include ../../base/mixins
+include ../../base/header
+include ../../base/footer
 
 block data
 
@@ -24,15 +24,15 @@ html(lang="ru")
 
     link(rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png")
     link(rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png")
-    link(rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png") 
+    link(rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png")
     link(rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#ffcf55")
     meta(name="msapplication-TileColor" content="#ffcf55")
     meta(name="theme-color" content="#ffffff")
 
-    link(rel="stylesheet", href="css/style2.min.css")
+    link(rel="stylesheet", href="../css/style2.min.css")
 
   body.experiment
-    include ../../../build/img/sprite2_auto.svg
+    include ../../../../build/img/sprite2_auto.svg
     header.page-header.page-header--index.page-header--nojs.page-header--closed
         .page-header__logo
             a
@@ -48,12 +48,12 @@ html(lang="ru")
                 li.main-navigation__item
                     a(href="escaperoom-selectQuest.html") Акции
                 li.main-navigation__item
-                    a(href="escaperoom-selectQuest.html") Контакты          
+                    a(href="escaperoom-selectQuest.html") Контакты
             ul.user-navigation
                 li.user-navigation__item.user-navigation__item--city
                     a.jsCity(href="#") Новосибирск
                 li.user-navigation__item
-                    a.jsCity(href="tel:+73832840160") 8 (383) 284 01 60             
+                    a.jsCity(href="tel:+73832840160") 8 (383) 284 01 60
     main
          section.quest.quest--experiment
             a.quest__home(href="escaperoom-selectQuest.html") Все квесты
@@ -62,18 +62,18 @@ html(lang="ru")
             .quest__info
                 span.quest__time 90 мин
                 span.quest__quantity 5–8 чел
-                span.quest__dificulty высокая сложность           
+                span.quest__dificulty высокая сложность
             p Вы стоите на пороге нового научного открытия, которое перевернет судьбу человечества. Но что-то идёт не так, и ядерный реактор, который работает на полную мощность, сигнализирует о скорой поломке. Удастся ли вам починить его в отведенное время<br>и предотвратить гибель людей в этом фатальном эксперименте?
-            a.button(href="escaperoom-book.html") Забронировать  
+            a.button(href="escaperoom-book.html") Забронировать
     footer.page-footer
       ul.socials
         li.socials__item.socials__item--instagram
-            a(href="#")       
+            a(href="#")
         li.socials__item.socials__item--vk
-            a(href="#")      
-      a.page-footer__question.jsQuestion(href="#") Задать вопрос    
+            a(href="#")
+      a.page-footer__question.jsQuestion(href="#") Задать вопрос
 
     block modals
 
-    script(src="js/vendor.min.js")
-    script(src="js/main.min.js")    
+    script(src="../js/vendor.min.js")
+    script(src="../js/main.min.js")
