--- a/source/pug/pages/honey/honey.pug
+++ b/source/pug/pages/honey/honey.pug
@@ -1,4 +1,4 @@
-extends ../base/layout
+extends ../../base/layout
 
 block data
 
@@ -21,11 +21,11 @@ block main
         span.schedule__phone +7 000 000 000
     section.intro
       .intro__main-image.intro__main-image--banki
-        img(src="img/typeBanki.png" alt="мед в банках" width="386" height="392")
+        img(src="../img/typeBanki.png" alt="мед в банках" width="386" height="392")
       .intro__main-image.intro__main-image--soty
-        img(src="img/typeSoty.png" alt="мед в сотах" width="900" height="740")
+        img(src="../img/typeSoty.png" alt="мед в сотах" width="900" height="740")
       .intro__main-image.intro__main-image--rozliv
-        img(src="img/typeRozliv.png" alt="мед на розлив" width="840" height="859")
+        img(src="../img/typeRozliv.png" alt="мед на розлив" width="840" height="859")
       h2.intro__heading Мед в сотах
       a.button(href="#") Хочу все!
       .themes
@@ -45,7 +45,7 @@ block main
       ul.content__list
         li.content__item.content__item--hit
           .content__image
-            img(src="img/soty2.jpg" width="1039" height="763" alt="мед в сотах")
+            img(src="../img/soty2.jpg" width="1039" height="763" alt="мед в сотах")
           p.content__info
             span.content__price 310 ₽
             span.content__price-measure /кг
@@ -53,7 +53,7 @@ block main
             a.button(href="#") Быстрый просмотр
         li.content__item.content__item--hit
           .content__image
-            img(src="img/soty.jpg" width="540" height="520" alt="мед в сотах")
+            img(src="../img/soty.jpg" width="540" height="520" alt="мед в сотах")
           p.content__info
             span.content__price 380 ₽
             span.content__price-measure /кг
@@ -61,7 +61,7 @@ block main
           a.button(href="#") Быстрый просмотр
         li.content__item.content__item--hit
           .content__image
-            img(src="img/vosk.jpg"  width="1000" height="1000" alt="воск")
+            img(src="../img/vosk.jpg"  width="1000" height="1000" alt="воск")
           p.content__info
             span.content__price 355 ₽
             span.content__price-measure /кг
@@ -69,7 +69,7 @@ block main
           a.button(href="#") Быстрый просмотр
         li.content__item.content__item--hit
           .content__image
-            img(src="img/s_propolisom.png"  width="370" height="270" alt="Мед с прополисом")
+            img(src="../img/s_propolisom.png"  width="370" height="270" alt="Мед с прополисом")
           p.content__info
             span.content__price 415 ₽
             span.content__price-measure /кг
@@ -101,7 +101,7 @@ block main
         a.news__link(href="#") Кленовый сахар
         p.news__link-description Из чего делают кленовый сахар, Состав кленового сахара, Где и как используют кленовый сахар
       article.news__item.news__item--subscription
-        p.news__description Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. 
+        p.news__description Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит.
         form.news__form(action="#" method="post")
           input(type="email" placeholder="email@example.com")
           button.button(type="submit") Отправить
