--- a/source/pug/pages/escaperoom/escaperoom-selectQuest.pug
+++ b/source/pug/pages/escaperoom/escaperoom-selectQuest.pug
@@ -35,7 +35,7 @@ html(lang="ru")
     include ../../../../build/img/sprite2_auto.svg
     header.page-header.page-header--index.page-header--nojs.page-header--closed
         .page-header__logo
-            a
+            a(href="escaperoom.html" aria-label="на главную")
         a.page-header__toggle(href="#") Меню
         nav.main-menu
             ul.main-navigation
@@ -86,7 +86,7 @@ html(lang="ru")
             ul.gallery
                 li.gallery__item.gallery__item--hit
                     a(href="#")
-                        img(src="img/crypt-list.jpg" alt="Склеп")
+                        img(src="../img/crypt-list.jpg" alt="Склеп")
                         h3 Склеп
                         p пр. Ленина, 37
                         div
@@ -96,7 +96,7 @@ html(lang="ru")
                                 span сложный
                 li.gallery__item.gallery__item--hit.gallery__item--available
                     a(href="escaperoom-maniack.html")
-                        img(src="img/maniack-list.jpg" alt="Маньяк")
+                        img(src="../img/maniack-list.jpg" alt="Маньяк")
                         h3 Маньяк
                         p Верхнетецкая, 32
                         div
@@ -106,7 +106,7 @@ html(lang="ru")
                                 span средний
                 li.gallery__item.gallery__item--available
                     a(href="escaperoom-ritual.html")
-                        img(src="img/ritual-list.jpg" alt="Ритуал")
+                        img(src="../img/ritual-list.jpg" alt="Ритуал")
                         h3 Ритуал
                         p пр. Ленина, 37
                         div
@@ -116,7 +116,7 @@ html(lang="ru")
                                 span сложный
                 li.gallery__item
                     a(href="#")
-                        img(src="img/ghosts-list.jpg" alt="История призраков")
+                        img(src="../img/ghosts-list.jpg" alt="История призраков")
                         h3 История призраков
                         p Новослободская, 2а
                         div
@@ -126,7 +126,7 @@ html(lang="ru")
                                 span легкий
                 li.gallery__item.gallery__item--mansion.gallery__item--available
                     a(href="escaperoom-mansion.html")
-                        img(src="img/mansion-list.jpg" alt="Тайны старого особняка")
+                        img(src="../img/mansion-list.jpg" alt="Тайны старого особняка")
                         h3 Тайны старого особняка
                         p пр. Ленина, 37
                         div
@@ -136,7 +136,7 @@ html(lang="ru")
                                 span легкий
                 li.gallery__item.gallery__item--cabin.gallery__item--hit
                     a(href="#")
-                        img(src="img/cabin-list.jpg" alt="Хижина в лесу")
+                        img(src="../img/cabin-list.jpg" alt="Хижина в лесу")
                         h3 Хижина в лесу
                         p Верхнетецкая, 32
                         div
@@ -146,7 +146,7 @@ html(lang="ru")
                                 span средний
                 li.gallery__item.gallery__item--experiment.gallery__item--hit.gallery__item--available
                     a(href="escaperoom-experiment.html")
-                        img(src="img/experiment.jpg" alt="Фатальный эксперимент")
+                        img(src="../img/experiment.jpg" alt="Фатальный эксперимент")
                         h3 Фатальный эксперимент
                         p Верхнетецкая, 32
                         div
@@ -156,7 +156,7 @@ html(lang="ru")
                                 span сложный
                 li.gallery__item
                     a(href="#")
-                        img(src="img/metro-list.jpg" alt="Метро 2033")
+                        img(src="../img/metro-list.jpg" alt="Метро 2033")
                         h3 Метро 2033
                         p Новослободская, 2а
                         div
@@ -166,7 +166,7 @@ html(lang="ru")
                                 span средний
                 li.gallery__item
                     a(href="#")
-                        img(src="img/attic-list.jpg" alt="Старый чердак")
+                        img(src="../img/attic-list.jpg" alt="Старый чердак")
                         h3 Старый чердак
                         p Новослободская, 2а
                         div
@@ -176,7 +176,7 @@ html(lang="ru")
                                 span легкий
                 li.gallery__item.gallery__item--boundary
                     a(href="#")
-                        img(class="boundary" src="img/boundary-list.jpg" alt="Последний рубеж")
+                        img(class="boundary" src="../img/boundary-list.jpg" alt="Последний рубеж")
                         h3 Последний рубеж
                         p Верхнетецкая, 32
                         div
@@ -186,7 +186,7 @@ html(lang="ru")
                                 span средний
                 li.gallery__item
                     a(href="#")
-                        img(src="img/mars-list.jpg" alt="Марс-2056")
+                        img(src="../img/mars-list.jpg" alt="Марс-2056")
                         h3 Марс-2056
                         p пр. Ленина, 37
                         div
