--- a/source/pug/pages/escaperoom/escaperoom-ritual.pug
+++ b/source/pug/pages/escaperoom/escaperoom-ritual.pug
@@ -35,7 +35,7 @@ html(lang="ru")
     include ../../../../build/img/sprite2_auto.svg
     header.page-header.page-header--index.page-header--nojs.page-header--closed
         .page-header__logo
-            a
+            a(href="escaperoom.html" aria-label="на главную")
         a.page-header__toggle(href="#") Меню
         nav.main-menu
             ul.main-navigation
