правит webpack.config

--- a/source/pug/pages/escaperoom/escaperoom-book.pug
+++ b/source/pug/pages/escaperoom/escaperoom-book.pug
@@ -133,4 +133,4 @@ html(lang="ru")
     block modals
 
     script(src="../js/vendor.min.js")
-    script(src="../js/main.min.js")
+    script(src="../js/escaperoom.min.js")
