--- a/source/pug/pages/escaperoom/escaperoom-ritual.pug
+++ b/source/pug/pages/escaperoom/escaperoom-ritual.pug
@@ -76,4 +76,4 @@ html(lang="ru")
     block modals
 
     script(src="../js/vendor.min.js")
-    script(src="../js/main.min.js")
+    script(src="../js/escaperoom.min.js")
