--- a/source/pug/pages/escaperoom/escaperoom-selectQuest.pug
+++ b/source/pug/pages/escaperoom/escaperoom-selectQuest.pug
@@ -205,4 +205,4 @@ html(lang="ru")
     block modals
 
     script(src="../js/vendor.min.js")
-    script(src="../js/main.min.js")
+    script(src="../js/escaperoom.min.js")
